tests/error/comprehension_errors/multi_use2.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def foo(qs: list[qubit] @owned, xs: list[int]) -> list[qubit]:
13:        return [q for x in xs for q in qs]
                                          ^^
GuppyTypeError: Variable `qs` with linear type `list[qubit]` would be used multiple times when evaluating this comprehension
